--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
 
     <script>
         // Configurações da API OpenRouter
-        const OPENROUTER_API_KEY = "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";
+        const OPENROUTER_API_KEY = "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";
         const OPENROUTER_API_URL = "https://openrouter.ai/api/v1/chat/completions";
         const MODEL_NAME = "deepseek/deepseek-chat";
 
@@ -585,7 +585,7 @@
                 id: 'jornal2',
                 title: 'O Paiz',
                 description: 'Principal jornal republicano do período',
-                image: 'images/o_paiz.png',
+                image: 'images/o_paiz.jpeg',
                 articles: [
                     {
                         title: 'Revolta da Armada',
@@ -603,7 +603,7 @@
                 id: 'jornal3',
                 title: 'Jornal do Commercio',
                 description: 'Focado em economia e negócios',
-                image: 'images/jornal_commercio.png',
+                image: 'images/jornal_commercio.jpg',
                 articles: [
                     {
                         title: 'Crise do Café com Leite',
@@ -621,7 +621,7 @@
                 id: 'jornal4',
                 title: 'Revista Fon-Fon',
                 description: 'Revista ilustrada de variedades',
-                image: 'images/fon_fon.png',
+                image: 'images/fon_fon.jpg',
                 articles: [
                     {
                         title: 'Semana de Arte Moderna',
@@ -657,7 +657,7 @@
                 id: 'jornal6',
                 title: 'Diário de Notícias',
                 description: 'Jornal de grande circulação',
-                image: 'images/diario_noticias.png',
+                image: 'images/diario_noticias.jpg',
                 articles: [
                     {
                         title: 'Revolução de 1930',
