--- a/ai.html
+++ b/ai.html
@@ -792,7 +792,7 @@
 
     <script>
         // Configurações da API OpenRouter
-        const OPENROUTER_API_KEY = "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"; // Substitua por sua nova chave válida
+        const OPENROUTER_API_KEY = ""; // Substitua por sua nova chave válida
         const OPENROUTER_API_URL = "https://openrouter.ai/api/v1/chat/completions";
         const MODEL_NAME = "deepseek/deepseek-chat";
 
