--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="images/flor.jpg" alt="Primeira República" style="width: 60px; height: 60px; object-fit: cover; border-radius: 50%;">
+                <img src="images/cafe.png" alt="Primeira República" style="width: 60px; height: 60px; object-fit: cover; border-radius: 50%;">
                 <h1> IAtlas Primeira República</h1>
             </div>
             <nav>
