--- a/quiz.html
+++ b/quiz.html
@@ -241,45 +241,46 @@
             {
                 question: "Qual foi o primeiro presidente da República brasileira?",
                 options: [
-                    "Deodoro da Fonseca",
+                    "Deodoro Fonseca",
                     "Floriano Peixoto",
                     "Prudente de Morais",
-                    "Campos Sales"
+                    "Deodoro da Fonseca"
                 ],
-                answer: 0,
+                answer: 3,
                 explanation: "Deodoro da Fonseca foi o primeiro presidente, de 1889 a 1891, inicialmente como chefe do governo provisório e depois eleito indiretamente."
             },
             {
                 question: "O que foi a Política do Café com Leite?",
                 options: [
+                    "Alternância de presidentes de São Paulo e Rio de Janeiro",
                     "Alternância de presidentes de São Paulo (café) e Minas Gerais (leite)",
-                    "Subsídios à produção de café e leite",
-                    "Política de exportação agrícola",
-                    "Nenhuma das anteriores"
+                    "Subsídios à produção de café e leite de Minas Gerais e São Paulo",
+                    "Alternância de presidentes de São Paulo e Minas Gerais",
+                    "Alternância de governadores entre os dois maiores produtores de café e leite da época"
                 ],
-                answer: 0,
+                answer: 3,
                 explanation: "Foi o acordo político que alternava a presidência entre políticos de São Paulo (produtor de café) e Minas Gerais (produtor de leite)."
             },
             {
                 question: "Qual foi a principal consequência da Revolta da Armada (1893)?",
                 options: [
-                    "Fortalecimento do governo de Floriano Peixoto",
                     "Queda do presidente Floriano Peixoto",
-                    "Retorno da monarquia",
-                    "Independência do Rio Grande do Sul"
+                    "Fortalecimento do governo de Floriano Peixoto",
+                    "Retorno do terceiro governo de Floriano Peixoto",
+                    "Independência de Minas Gerais sobre São Paulo"
                 ],
-                answer: 0,
+                answer: 1,
                 explanation: "Apesar da gravidade da revolta, Floriano Peixoto conseguiu suprimi-la, o que fortaleceu seu governo e lhe rendeu o apelido de 'Marechal de Ferro'."
             },
             {
                 question: "Qual presidente ficou conhecido como 'Marechal de Ferro'?",
                 options: [
-                    "Floriano Peixoto",
-                    "Deodoro da Fonseca",
                     "Hermes da Fonseca",
+                    "Deodoro da Fonseca",
+                    "Floriano Peixoto",
                     "Epitácio Pessoa"
                 ],
-                answer: 0,
+                answer: 2,
                 explanation: "Floriano Peixoto (1891-1894) recebeu esse apelido por sua postura firme durante a Revolta da Armada e outras crises."
             },
             {
@@ -287,8 +288,9 @@
                 options: [
                     "Política econômica que causou inflação e especulação",
                     "Movimento abolicionista",
-                    "Revolta militar",
-                    "Tratado comercial com a Argentina"
+                    "Revolta militar, que por sua vez aumentou a inflação",
+                    "Política econômica que causou diminuição da inflação",
+                    "Revolta das massas contra a inflação que sujeitava a condições desumanas"
                 ],
                 answer: 0,
                 explanation: "Foi uma política econômica implementada por Rui Barbosa durante o governo Deodoro que levou a uma grande especulação financeira e inflação."
@@ -296,34 +298,36 @@
             {
                 question: "Qual foi o principal produto de exportação do Brasil durante a Primeira República?",
                 options: [
-                    "Café",
+                    "Leite",
                     "Açúcar",
                     "Borracha",
-                    "Algodão"
+                    "Café"
                 ],
-                answer: 0,
+                answer: 3,
                 explanation: "O café foi o principal produto de exportação, representando cerca de 70% das exportações brasileiras no período."
             },
             {
                 question: "Qual presidente implementou a política dos governadores?",
                 options: [
-                    "Campos Sales",
                     "Prudente de Morais",
+                    "Campos Sales",
+                    "Deodoro da Fonseca",
                     "Rodrigues Alves",
                     "Nilo Peçanha"
                 ],
-                answer: 0,
+                answer: 1,
                 explanation: "Campos Sales (1898-1902) estabeleceu a 'Política dos Governadores', um acordo entre o governo federal e as oligarquias estaduais."
             },
             {
                 question: "Qual foi o principal movimento messiânico do período?",
                 options: [
-                    "Canudos",
                     "Revolta da Vacina",
+                    "Guerra de Canudos",
                     "Revolta da Chibata",
-                    "Revolução Federalista"
+                    "Revolução Federalista", 
+                    "Movimento Sufragista"
                 ],
-                answer: 0,
+                answer: 1,
                 explanation: "O movimento de Canudos (1896-1897), liderado por Antônio Conselheiro, foi o principal movimento messiânico do período."
             },
             {
@@ -340,12 +344,13 @@
             {
                 question: "O que foi a Revolta da Chibata?",
                 options: [
+                    "Revolta de militares contra castigos físicos",
+                    "Movimento de operários por direitos trabalhistas",
+                    "Movimento de militares contra a opressão do governo",
                     "Levante de marinheiros contra castigos físicos",
-                    "Revolta de escravos",
-                    "Movimento de operários",
-                    "Protesto de estudantes"
+                    "Protesto de estudantes por melhores condições de estudo"
                 ],
-                answer: 0,
+                answer: 3,
                 explanation: "Foi uma revolta de marinheiros em 1910, liderada por João Cândido, contra os castigos físicos na Marinha."
             },
             {
@@ -362,89 +367,99 @@
             {
                 question: "Qual foi o principal conflito militar entre estados durante a Primeira República?",
                 options: [
-                    "Revolução Federalista",
-                    "Guerra de Canudos",
                     "Revolta da Armada",
-                    "Revolta do Forte de Copacabana"
+                    "Revolta do Forte de Copacabana",
+                    "Guerra Federalista",
+                    "Revolta Federalista",
+                    "Revolução Federalista",
+                    "Movimento Federativo",
+                    "Insurreição Federalista"
                 ],
-                answer: 0,
+                answer: 4,
                 explanation: "A Revolução Federalista (1893-1895) foi um conflito entre federalistas e republicanos no Rio Grande do Sul."
             },
             {
                 question: "Qual presidente enfrentou a Primeira Guerra Mundial?",
                 options: [
-                    "Venceslau Brás",
+                    "Getúlio Vargas",
+                    "Rodrigues Alves", 
                     "Epitácio Pessoa",
+                    "Hermes da Fonseca",
                     "Artur Bernardes",
+                    "Venceslau Brás",
                     "Washington Luís"
                 ],
-                answer: 0,
+                answer: 5,
                 explanation: "Venceslau Brás (1914-1918) foi o presidente durante a Primeira Guerra Mundial, quando o Brasil acabou entrando ao lado dos Aliados."
             },
             {
                 question: "O que foi o Tenentismo?",
                 options: [
-                    "Movimento de jovens oficiais do Exército",
-                    "Partido político",
+                    "Movimento de jovens oficiais da marinha",
+                    "Movimento político de partidos de esquerda",
                     "Sindicato de trabalhadores",
-                    "Grupo de intelectuais"
+                    "Movimento de grupos de intelectuais",
+                    "Movimento de jovens oficiais do Exército"
                 ],
-                answer: 0,
+                answer: 4,
                 explanation: "Foi um movimento de jovens oficiais do Exército (tenentes) que criticavam as oligarquias e defendiam reformas políticas."
             },
             {
                 question: "Qual presidente enfrentou a Revolta do Forte de Copacabana?",
                 options: [
-                    "Epitácio Pessoa",
                     "Artur Bernardes",
                     "Washington Luís",
+                    "Epitácio Pessoa",
                     "Rodrigues Alves"
                 ],
-                answer: 0,
+                answer: 2,
                 explanation: "Epitácio Pessoa (1919-1922) enfrentou a Revolta do Forte de Copacabana em 1922, primeiro levante tenentista."
             },
             {
                 question: "Em que ano ocorreu a Semana de Arte Moderna?",
                 options: [
-                    "1922",
+                    "1921",
+                    "1923",
                     "1917",
                     "1930",
+                    "1922",
                     "1925"
                 ],
-                answer: 0,
+                answer: 4,
                 explanation: "A Semana de Arte Moderna ocorreu em fevereiro de 1922 no Teatro Municipal de São Paulo, marcando o início do Modernismo no Brasil."
             },
             {
                 question: "Qual presidente enfrentou a Coluna Prestes?",
                 options: [
-                    "Artur Bernardes",
-                    "Washington Luís",
-                    "Epitácio Pessoa",
-                    "Venceslau Brás"
+                    "Washington Luís (1926-1930)",
+                    "Delfim Moreira (1918-1919)",
+                    "Artur Bernardes (1922-1926)",
+                    "Hermes da Fonseca (1910-1914)"
                 ],
-                answer: 0,
+                answer: 2,
                 explanation: "Artur Bernardes (1922-1926) enfrentou a Coluna Prestes, movimento tenentista que percorreu o interior do Brasil pregando reformas."
             },
             {
                 question: "O que foi o Cangaço?",
                 options: [
-                    "Banditismo social no Nordeste",
-                    "Movimento operário",
-                    "Revolta militar",
-                    "Partido político"
+                    "Manifestação de justiceirismo sertanejo contra a opressão coronelista, com códigos de honra próprios",
+                    "Banditismo social marginalizado, mas com raízes nas desigualdades estruturais do Nordeste",
+                    "Milícia nômade que alternava entre o banditismo e a justiça popular, sem filiação política definida",
+                    "Expressão armada do misticismo rural, similar a movimentos messiânicos porém sem caráter religioso",
+                    "Grupo de guerrilha anti-estado pré-moderno, rejeitando tanto a ordem oligárquica quanto o centralismo republicano"
                 ],
-                answer: 0,
+                answer: 1,
                 explanation: "Foi um fenômeno de banditismo social no Nordeste, com figuras como Lampião, que atuaram durante a Primeira República."
             },
             {
                 question: "Qual presidente implementou o voto secreto?",
                 options: [
-                    "Nenhum, só após 1930",
                     "Rodrigues Alves",
                     "Epitácio Pessoa",
-                    "Washington Luís"
+                    "Washington Luís",
+                    "Nenhum"
                 ],
-                answer: 0,
+                answer: 3,
                 explanation: "O voto secreto só foi implementado após a Revolução de 1930, sendo uma das principais reivindicações não atendidas durante a Primeira República."
             },
             {
@@ -461,23 +476,25 @@
             {
                 question: "Qual foi o principal partido político da Primeira República?",
                 options: [
-                    "Não havia partidos nacionais organizados",
                     "Partido Republicano Paulista",
                     "Partido Republicano Mineiro",
-                    "Partido Democrático"
+                    "Partido Mineiro Paulistano",
+                    "Não havia partidos nacionais organizados",
+                    "Partido Democrático",
+                    "Todos os partidos estão certos"
                 ],
-                answer: 0,
+                answer: 3,
                 explanation: "Não havia partidos nacionais organizados, apenas agremiações estaduais que apoiavam os presidentes."
             },
             {
                 question: "O que foi a Revolução de 1930?",
                 options: [
-                    "Movimento que encerrou a Primeira República",
-                    "Revolta militar",
-                    "Golpe comunista",
-                    "Independência regional"
+                    "Conflito entre oligarquias dissidentes e o governo federal, com apoio tenentista e setores militares",
+                    "Movimento armado que depôs Washington Luís e impediu a posse de Júlio Prestes, pondo fim à República Velha",
+                    "Revolta de inspiração liberal-reformista, mas não socialista, que levou Getúlio Vargas ao poder",
+                    "Crise sucessória agravada pela quebra da Bolsa de NY, que fragilizou a política café-com-leite"
                 ],
-                answer: 0,
+                answer: 1,
                 explanation: "Foi o movimento liderado por Getúlio Vargas que depôs Washington Luís e encerrou a Primeira República, iniciando a Era Vargas."
             },
             {
@@ -494,32 +511,33 @@
             {
                 question: "Qual foi a principal rebelião operária do período?",
                 options: [
-                    "Greve Geral de 1917",
-                    "Revolta da Vacina",
-                    "Revolta da Chibata",
-                    "Movimento Tenentista"
+                    "Greve Geral de 1919",
+                    "Greve Geral de 1916",
+                    "Greve Geral de 1918",
+                    "Greve Geral de 1920",
+                    "Greve Geral de 1917"
                 ],
-                answer: 0,
+                answer: 4,
                 explanation: "A Greve Geral de 1917 em São Paulo foi a principal manifestação operária, influenciada por ideias anarquistas e socialistas."
             },
             {
                 question: "Qual presidente enfrentou a crise do café após 1929?",
                 options: [
-                    "Washington Luís",
                     "Júlio Prestes",
+                    "Washington Luís",
                     "Getúlio Vargas",
                     "Artur Bernardes"
                 ],
-                answer: 0,
+                answer: 1,
                 explanation: "Washington Luís enfrentou as consequências da quebra da Bolsa de Nova York em 1929, que afetou drasticamente as exportações de café."
             },
             {
                 question: "O que foi o Convênio de Taubaté?",
                 options: [
-                    "Acordo para valorizar o café",
-                    "Tratado de limites",
-                    "Pacto político",
-                    "Concordata religiosa"
+                    "Política de intervenção estatal para sustentar o preço do café através da compra de excedentes",
+                    "Acordo entre governos estaduais para criar um fundo de garantia às oligarquias cafeicultoras",
+                    "Medida emergencial que institucionalizou o protecionismo econômico às custas do Tesouro Nacional",
+                    "Experimento pioneiro de regulação de commodities na economia brasileira"
                 ],
                 answer: 0,
                 explanation: "Foi um acordo em 1906 entre os governos de São Paulo, Minas Gerais e Rio de Janeiro para comprar e estocar café a fim de manter os preços."
@@ -527,12 +545,12 @@
             {
                 question: "Qual foi o principal intelectual crítico da Primeira República?",
                 options: [
-                    "Euclides da Cunha",
                     "Machado de Assis",
                     "Oswaldo Cruz",
+                    "Euclides da Cunha",
                     "Rui Barbosa"
                 ],
-                answer: 0,
+                answer: 2,
                 explanation: "Euclides da Cunha, com 'Os Sertões' (1902), foi um dos principais críticos, denunciando as desigualdades sociais do período."
             },
             {
@@ -547,15 +565,16 @@
                 explanation: "A reforma urbana do prefeito Pereira Passos (1902-1906) modernizou o Rio de Janeiro, então capital federal."
             },
             {
-                question: "Qual grupo foi mais excluído politicamente na Primeira República?",
+                question: "Qual grupo foi radicalmente excluído do jogo político na Primeira República, sem canais formais ou informais de pressão?",
                 options: [
-                    "Operários e camponeses",
-                    "Fazendeiros de café",
-                    "Industriais",
-                    "Profissionais liberais"
+                    "Trabalhadores das charqueadas gaúchas, invisibilizados pela economia pastoril-exportadora",
+                    "Catadores de mangaba em Sergipe, sem estatuto jurídico reconhecido",
+                    "Quebradeiras de coco babaçu, organizadas em economias de subsistência à margem do Estado",
+                    "Seringueiros amazônicos submetidos ao aviamento, sem cidadania de fato",
+                    "Camadas subproletárias urbanas, como carroceiros e vendedores ambulantes sem registro civil"
                 ],
-                answer: 0,
-                explanation: "Operários e camponeses foram os mais excluídos, sem representação política no sistema oligárquico da Primeira República."
+                answer: 3,
+                explanation: "Os seringueiros amazônicos representavam o grupo mais radicalmente excluído: viviam em regime de escravidão por dívida no sistema de aviamento, isolados geograficamente e sem qualquer reconhecimento como cidadãos. Diferente de outros grupos marginalizados, não tinham acesso nem mesmo aos mecanismos informais de pressão política ou clientelismo que existiam para outros setores pobres da população."
             }
         ];
 
